# ec34-ds-for-econ

./: .gitignore  CLAUDE.md  README.md  presentation.typ  pyproject.toml  uber_test.py
assignments/: assignment-11.ipynb  assignment-8.ipynb
exams/: midterm.typ  midterm_answer_key.typ
games/crisis/: app.py  data.py  instructions.md
games/crisis/game_data/: district_1.csv  district_10.csv  district_2.csv  district_3.csv  district_4.csv  district_5.csv  district_6.csv  district_7.csv  district_8.csv  district_9.csv
games/crypto/: student_hacker.py  teacher_server.py
games/ml/: answer_key.md  app.py  data.py  student_notebook.ipynb
lectures/: python-for-social-scientists.ipynb
lectures/causal-regression/: causal-regression.ipynb
lectures/dags/: dags.html  dags.qmd
lectures/efficient-coding/: efficient-coding.html
lectures/geospatial-analysis/: geospatial-analysis.ipynb
lectures/git-workflow/: git-workflow.qmd
lectures/import-and-numpy/: import-and-numpy.ipynb
lectures/llms/: llms.ipynb
lectures/machine-learning/: ensembling.py  machine-learning.ipynb  machine-learning.py
lectures/monte-carlo/: monte-carlo.ipynb
lectures/neural-net/: neural-net.ipynb
lectures/pandas/: pandas.ipynb
lectures/visualization/: visualization.ipynb
lectures/web-scraping/: web-scraping.ipynb
problem-sets/: ps3.md  ps4.md
