[project]
name = "ec34-ds-for-econ"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "backoff>=2.2.1",
    "bs4>=0.0.2",
    "cartopy>=0.25.0",
    "doubleml>=0.11.1",
    "dowhy>=0.14",
    "earthengine-api>=1.7.4",
    "econml>=0.16.0",
    "fastapi>=0.128.0",
    "geemap>=0.36.6",
    "geopandas>=1.1.2",
    "ipykernel>=7.1.0",
    "lingam>=1.12.1",
    "mapclassify>=2.8.1",
    "marimo>=0.20.2",
    "matplotlib>=3.10.8",
    "moderndid>=0.0.1",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "openai>=2.14.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-datareader>=0.10.0",
    "perfplot>=0.10.2",
    "pgmpy>=1.0.0",
    "pillow>=12.1.0",
    "polars>=1.38.1",
    "pyarrow>=22.0.0",
    "pyfixest>=0.40.1",
    "python-dotenv>=1.2.1",
    "rasterio>=1.4.4",
    "rdrobust>=1.3.0",
    "rpy2>=3.6.4",
    "scikit-learn>=1.6",
    "seaborn>=0.13.2",
    "selenium>=4.40.0",
    "shap>=0.48.0",
    "statsmodels>=0.14.6",
    "streamlit>=1.54.0",
    "torchvision>=0.24.1",
    "torchviz>=0.0.3",
    "uvicorn>=0.40.0",
    "wbdata>=1.1.0",
    "wildboottest>=0.3.2",
    "wooldridge>=0.5.0",
    "xgboost>=3.1.2",
    "ydata-profiling>=4.12.2",
]
